--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,7 +4,7 @@
   <div class="container mx-auto">
     <div class="pb-10">
       <h1 class="text-orange text-xl">O NASZEJ FIRMIE:</h1>
-      <p class="text-white pb-10">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+      <p class="text-white pb-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
         when an unknown printer took a galley of type and scrambled it to make a type specimen book. 
         It has survived not only five centuries, but also the leap into electronic typesetting, remaining 
@@ -118,7 +118,7 @@
        <!-- FIRST COL -->
         <div class="w-full lg:w-2/3 lg:pr-8">
          <h1 class="text-white text-2xl lg:text-3xl font-bold mb-2">Masz Pytania?</h1>
-         <p class="text-white mb-6 lg:text-lg">Jeśli nie wiesz czy nasza oferta jest dla Ciebie, czy zwyczajnie masz jakiekolwiek pytania dotyczące współpracy z nami wystarczy, że zadzwonisz do nas i postaramy się odpowiedzieć na każde zadane pytanie.</p>
+         <p class="text-white mb-6 lg:text-lg">Jeśli nie wiesz czy nasza oferta jest dla Ciebie, czy zwyczajnie masz jakiekolwiek pytania dotyczące współpracy z nami, zadzwoń lub napisz do nas i postaramy się odpowiedzieć na każde zadane pytanie.</p>
         </div>
       <!-- SECOND COL -->
         <div>
