--- a/src/app/pages/offer/offer.component.html
+++ b/src/app/pages/offer/offer.component.html
@@ -1,1 +1,141 @@
-<p>offer works!</p>
+
+<!-- OFFER SECTION -->
+<section class="bg-black w-full pt-4 px-4 pb-5 lg:pt-[25px] text-center " data-aos="fade-up" data-aos-offset="200" data-aos-delay="50">
+    
+    <!-- TEXT GŁÓWNY -->
+    <h1 class="text-center font-bold text-xl xl:text-3xl text-orange shadow-sm mb-2"> Zapoznaj się z naszą ofertą:</h1>
+    
+    <!-- SMALL MENU -->
+    <div class="flex flex-wrap justify-center xl:mb-2">
+        <button class="bg-brown text-white m-1 xl:p-2 p-2 text-xs xl:text-base italic hover:bg-orange rounded-sm">Płyta fundamentowa</button>
+        <button class="bg-brown text-white m-1 xl:p-2 p-2 text-xs xl:text-base italic hover:bg-orange rounded-sm">Płyta grzewcza</button>
+        <button class="bg-brown text-white m-1 xl:p-2 p-2 text-xs xl:text-base italic hover:bg-orange rounded-sm">Pale fndamentowe</button>
+        <button class="bg-brown text-white m-1 xl:p-2 p-2 text-xs xl:text-base italic hover:bg-orange rounded-sm">Pale fndamentowe</button>
+        <button class="bg-brown text-white m-1 xl:p-2 p-2 text-xs xl:text-base italic hover:bg-orange rounded-sm">Stropy</button>
+    </div>
+
+    <!-- SEKCJA KART -->
+    <div class="flex flex-wrap justify-center " >
+        
+        <!-- PŁYTY FUNDAMENTOWE -->
+        <div class="max-w-sm rounded overflow-hidden shadow-lg bg-white m-2 relative"> <!-- Added relative positioning to the container -->
+            <img class="h-[300px]" src="https://images.pexels.com/photos/2469/building-construction-building-site-constructing.jpg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+            <div class="px-6 py-1">
+                <div class="font-bold text-xl mb-1 text-orange">PŁYTY FUNDAMENTOWE</div>
+                <p class="text-black text-base mb-[50px]">
+                    Odstąp od utartych schematów przy budowie fundamentu. Z naszymi innowacyjnymi płytami fundamentowymi 
+                    SOLID BASE, kroczysz w stronę przyszłości!
+                </p>
+            </div>
+            <div class="absolute bottom-0 left-0 right-0 text-center m-5"> <!-- Absolute positioning for the button -->
+                <button 
+                    class="inline-block bg-brown rounded-full px-3 py-1 text-sm
+                    font-semibold text-white mr-2 hover:bg-orange hover:drop-shadow-lg"
+                    >DOWIEDZ SIĘ WIĘCEJ
+                </button> 
+            </div>
+        </div>
+       
+        <!-- PŁYTY GRZEWCZE -->
+        <div class="max-w-sm rounded overflow-hidden shadow-lg bg-white m-2 relative"> <!-- Added relative positioning to the container -->
+            <img class="h-[300px]" src="https://images.pexels.com/photos/12032961/pexels-photo-12032961.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+            <div class="px-6 py-1">
+                <div class="font-bold text-xl mb-1 text-orange">PŁYTY GRZEWCZE</div>
+                <p class="text-black text-base mb-[50px]">
+                    Płyty grzewcze fundamentowe to nowoczesne rozwiązanie integrujące funkcje ogrzewania z tradycyjnymi fundamentami.
+                    Wykorzystaj ich możliwośći! 
+                </p>
+            </div>
+            <div class="absolute bottom-0 left-0 right-0 text-center m-5"> <!-- Absolute positioning for the button -->
+                <button 
+                    class="inline-block bg-brown rounded-full px-3 py-1 text-sm
+                    font-semibold text-white mr-2 hover:bg-orange hover:drop-shadow-lg"
+                    >DOWIEDZ SIĘ WIĘCEJ
+                </button> 
+            </div>
+        </div>
+
+        <!-- PALE FUNDAMENTOWE -->
+        <div class="max-w-sm rounded overflow-hidden shadow-lg bg-white m-2 relative"> <!-- Added relative positioning to the container -->
+            <img class="h-[300px]" src="https://images.pexels.com/photos/15109999/pexels-photo-15109999/free-photo-of-view-of-construction-workers-at-a-construction-site.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+            <div class="px-6 py-1">
+                <div class="font-bold text-xl mb-1 text-orange">PALE FUNDAMENTOWE</div>
+                <p class="text-black text-base mb-[50px]">
+                    Palowanie fundamentowe to metoda stosowana w budownictwie do wzmocnienia gruntu
+                    poprzez wbicie pionowych pale lub słupów. Zapewnia stabilną podstawę dla budynków, 
+                    minimalizując ryzyko osiadania i zwiększając trwałość konstrukcji.
+                </p>
+            </div>
+            <div class="absolute bottom-0 left-0 right-0 text-center m-5"> <!-- Absolute positioning for the button -->
+                <button 
+                    class="inline-block bg-brown rounded-full px-3 py-1 text-sm
+                    font-semibold text-white mr-2 hover:bg-orange hover:drop-shadow-lg"
+                    >DOWIEDZ SIĘ WIĘCEJ
+                </button> 
+            </div>
+        </div>
+
+        <!-- STROPY -->
+        <div class="max-w-sm rounded overflow-hidden shadow-lg bg-white m-2 relative"> <!-- Added relative positioning to the container -->
+            <img class="h-[300px]" src="https://images.pexels.com/photos/1872165/pexels-photo-1872165.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+            <div class="px-6 py-1">
+                <div class="font-bold text-xl mb-1 text-orange">STROPY / STROPY GRZEWCZE</div>
+                <p class="text-black text-base mb-[50px]">
+                    Stropy wylewane z betonu są powszechnie stosowaną metodą konstrukcyjną, charakteryzującą się trwałością i wytrzymałością.
+                    Możliwość wykorzystania stropów grzewczych dodatkowo zwiększa ich funkcjonalność i efektywność energetyczną.
+                </p>
+            </div>
+            <div class="absolute bottom-0 left-0 right-0 text-center m-5"> <!-- Absolute positioning for the button -->
+                <button 
+                    class="inline-block bg-brown rounded-full px-3 py-1 text-sm 
+                    font-semibold text-white mr-2 hover:bg-orange hover:drop-shadow-lg"
+                    >DOWIEDZ SIĘ WIĘCEJ
+                </button> 
+            </div>
+        </div>
+
+    </div>
+</section>
+
+<!-- CONTACT SECTION -->
+<section class="bg-orange pt-3 px-4 pb-5 lg:pt-[30px] lg:pb-6" data-aos="fade-up" data-aos-offset="20" data-aos-delay="50">
+    <div class="container mx-auto">
+      <!-- 2 COL FELX -->
+       <div class="flex flex-col lg:flex-row items-center justify-between">
+        <!-- FIRST COL -->
+         <div class="w-full lg:w-2/3 lg:pr-8">
+          <h1 class="text-white text-2xl lg:text-3xl font-bold mb-2">Masz Pytania?</h1>
+          <p class="text-white mb-6 lg:text-lg">
+            Jeśli nie wiesz czy nasza oferta jest dla Ciebie, czy zwyczajnie masz jakiekolwiek pytania
+            dotyczące współpracy z nami, zadzwoń lub napisz do nas i postaramy się odpowiedzieć na każde
+            zadane pytanie.</p>
+         </div>
+       <!-- SECOND COL -->
+         <div>
+           <a href="/contact" class="inline-block px-6 py-6 bg-white text-xl text-orange font-semibold rounded-md hover:text-white hover:bg-black transition duration-200 shadow-lg">
+               Skontaktuj się z nami teraz
+           </a>
+         </div>
+       
+      </div>
+    </div>
+ </section>
+  
+
+    
+    
+    <!-- <div class="container mx-auto">
+      <div class="pb-10">
+        <h2 class="text-orange font-bold text-md">Płyta fundamentowa: Nowoczesne Rozwiązanie Budowlane</h2>
+        <p class="text-white text-sm">Płyta fundamentowa to innowacyjne rozwiązanie,
+             które zmienia oblicze budownictwa. W porównaniu z tradycyjnymi metodami, 
+             płyty fundamentowe oferują szybszy, łatwiejszy i bardziej efektywny sposób 
+             budowy solidnych fundamentów.
+        </p>
+        <h3 class="">Szybkość i Stabilność</h3>
+        <p class="text-white pb-10">Montaż płyty fundamentowej jest szybki i prosty, 
+            co skraca czas budowy i zmniejsza koszty robocizny. Ponadto, 
+            płyta fundamentowa zapewnia równomierną rozprowadzenie ciężaru budynku,
+             co przekłada się na większą stabilność konstrukcji.
+        </p>
+      </div> -->
