--- a/src/app/pages/pricing/pricing.component.html
+++ b/src/app/pages/pricing/pricing.component.html
@@ -41,6 +41,16 @@
           required
           class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-orange focus:ring-orange sm:text-sm"
           placeholder="Jan Kowalski"/>
+          <div *ngIf="form.get('name')?.errors?.['required'] && form.get('name')?.touched" class="text-red-500">
+            Wymagane imię i nazwisko.
+          </div>
+          <div *ngIf="form.get('name')?.errors?.['minlength'] && form.get('name')?.touched" class="text-red-500">
+            Wpisz min. 3 znaki.
+          </div>
+          <div *ngIf="form.get('name')?.errors?.['pattern'] && form.get('name')?.touched" class="text-red-500">
+            Podaj imię i nazwisko.
+          </div>
+          
       </div>
       <div>
         <label for="email" class="block text-sm font-medium text-gray-700">E-mail *</label>
@@ -52,13 +62,18 @@
           required
           class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-orange focus:ring-orange sm:text-sm"
           placeholder="jan@example.com"/>
+          <div *ngIf="form.get('email')?.errors?.['required'] && form.get('email')?.touched" class="text-red-500">
+            Wymagany adres email.
+          </div>
+          <div *ngIf="form.get('email')?.errors?.['email'] && form.get('email')?.touched" class="text-red-500">
+            Wprowadź poprawny email.
+          </div>
       </div>
 
       <!-- Phone and Construction Address -->
       <div>
         <label for="phone" class="block text-sm font-medium text-gray-700"
-          >Telefon *</label
-        >
+          >Telefon *</label>
         <input
           formControlName="phone"
           type="tel"
@@ -67,6 +82,12 @@
           required
           class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-orange focus:ring-orange sm:text-sm"
           placeholder="123 456 789"/>
+          <div *ngIf="form.get('phone')?.errors?.['required'] && form.get('phone')?.touched" class="text-red-500">
+            Wymagany numer telefonu.
+          </div>
+          <div *ngIf="form.get('phone')?.errors?.['minlength'] && form.get('phone')?.touched" class="text-red-500">
+            Wymagane min. 6 cyfr.
+          </div>
       </div>
       <div>
         <label for="address" class="block text-sm font-medium text-gray-700">Adres Budowy *</label>
@@ -78,6 +99,12 @@
           required
           class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-orange focus:ring-orange sm:text-sm"
           placeholder="ul. Budowlana 1, 00-000 Miastowo"/>
+      </div>
+      <div *ngIf="form.get('address')?.errors?.['required'] && form.get('address')?.touched" class="text-red-500">
+        Wymagany adres.
+      </div>
+      <div *ngIf="form.get('address')?.errors?.['minlength'] && form.get('address')?.touched" class="text-red-500">
+        Wpisz min. 10 znaków.
       </div>
 
       <!-- Project Name and Foundation Area -->
@@ -93,6 +120,12 @@
           required
           class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-orange focus:ring-orange sm:text-sm"
           placeholder="Projekt Domu"/>
+          <div *ngIf="form.get('project')?.errors?.['required'] && form.get('project')?.touched" class="text-red-500">
+            Wymagana nazwa projektu.
+          </div>
+          <div *ngIf="form.get('project')?.errors?.['minlength'] && form.get('project')?.touched" class="text-red-500">
+            Wpisz min. 3 znaki.
+          </div>
       </div>
       <div>
         <label
@@ -109,6 +142,19 @@
           step="0.01"
           class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-orange focus:ring-orange sm:text-sm"
           placeholder="np. 120.5"/>
+      </div>
+      <div *ngIf="form.get('area')?.errors?.['required'] && form.get('area')?.touched" class="text-red-500">
+        Wymagana powierzchnia.
+      </div>
+    
+      <!-- Min Validation Message -->
+      <div *ngIf="form.get('area')?.errors?.['min'] && form.get('area')?.touched" class="text-red-500">
+        Wpisz numer.
+      </div>
+    
+      <!-- Pattern Validation Message -->
+      <div *ngIf="(form.get('area')?.errors?.['min'] || form.get('area')?.errors?.['pattern']) && form.get('area')?.touched" class="text-red-500">
+        Podaj właściwy numer.
       </div>
 
       <!-- Voivodeship -->
@@ -138,6 +184,9 @@
           <option value="Małopolskie">Małopolskie</option>
           <option value="Podkarpackie">Podkarpackie</option>
         </select>
+        <div *ngIf="form.get('voivodeship')?.errors?.['required'] && form.get('voivodeship')?.touched" class="text-red-500">
+            Wymagany wybór.
+          </div>
       </div>
     </div>
 
@@ -153,7 +202,11 @@
         <option value="Parter i poddasze">Parter i poddasze</option>
         <option value="Dwa piętra">Dwa piętra</option>
         <option value="Więcej niż dwa piętra">Więcej niż dwa piętra</option>
+        <option value="Inna">Inna</option>
       </select>
+      <div *ngIf="form.get('storey')?.errors?.['required'] && form.get('storey')?.touched" class="text-red-500">
+        Wymagany wybór.
+       </div>
     </div>
 
     <div>
@@ -166,7 +219,11 @@
         <option value="">Wybierz...</option>
         <option value="Śkośny">Skośny</option>
         <option value="Płaski">Płaski</option>
+        <option value="Płaski">Inny</option>
       </select>
+      <div *ngIf="form.get('roof')?.errors?.['required'] && form.get('roof')?.touched" class="text-red-500">
+        Wymagany wybór.
+       </div>
     </div>
 
     <div>
@@ -180,6 +237,9 @@
         <option value="Tak mam">Tak mam</option>
         <option value="Nie mam">Nie mam</option>
       </select>
+      <div *ngIf="form.get('geology')?.errors?.['required'] && form.get('geology')?.touched" class="text-red-500">
+        Wymagany wybór.
+       </div>
     </div>
 
     <div>
@@ -193,6 +253,13 @@
         name="start"
         class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-orange focus:ring-orange sm:text-sm"/>
     </div>
+    <div *ngIf="form.get('start')?.errors?.['required'] && form.get('start')?.touched" class="text-red-500">
+        Wymagany wybór.
+    </div>
+    <div *ngIf="form.get('start')?.errors?.['pastDate'] && form.get('start')?.touched" class="text-red-500">
+        Data nie może być przeszła.
+    </div>
+    
     <div>
       <label
         for="comments"
@@ -204,6 +271,10 @@
         rows="4"
         class="mt-1 block w-full rounded-md border-grey shadow-sm focus:border-orange focus:ring-orange sm:text-sm"
         placeholder="(Opcjonalnie) Wpisz tutaj swoje uwagi lub komentarze..."></textarea>
+        <div *ngIf="form.get('comments')?.errors?.['maxlength'] && form.get('comments')?.touched" class="text-red-500">
+            Komentarz może mieć max. 1500 znaków.
+          </div>
+          
     </div>
     <div class="mt-4">
       <label class="inline-flex items-center">
@@ -214,7 +285,7 @@
           name="consent"
           class="rounded border-grey text-orange shadow-sm focus:border-orange focus:ring focus:ring-orange focus:ring-opacity-50"
           required/>
-        <span class="ml-2 text-sm text-gray-600">Oświadczam niniejszym, że jestem potencjalnym klientem z zamiarem
+        <span class="ml-2 text-sm text-gray-600">* Oświadczam niniejszym, że jestem potencjalnym klientem z zamiarem
           budowy, aktualnie budującym lub sondującym rynek w celu zdobycia
           danych o kosztach związanych z budową domu.
           Jednocześnie wyrażam zgodę na przetwarzanie moich danych osobowych w
@@ -222,6 +293,9 @@
           właściciela strony Solid Base zgodnie z ustawą z dnia 29 sierpnia 1997
           r. o ochronie danych osobowych (Dz. U.Nr 133. poz. 883).</span>
       </label>
+      <div *ngIf="form.get('consent')?.errors?.['required'] && form.get('consent')?.touched" class="text-red-500">
+        Wymagana zgoda.
+      </div>
     </div>
 
     <div>
