Update offer ts,  small changes home and offer html  style

--- a/src/app/pages/offer/offer.component.html
+++ b/src/app/pages/offer/offer.component.html
@@ -9,8 +9,7 @@
     <div class="flex flex-wrap justify-center xl:mb-2">
         <button class="bg-brown text-white m-1 xl:p-2 p-2 text-xs xl:text-base italic hover:bg-orange rounded-sm">Płyta fundamentowa</button>
         <button class="bg-brown text-white m-1 xl:p-2 p-2 text-xs xl:text-base italic hover:bg-orange rounded-sm">Płyta grzewcza</button>
-        <button class="bg-brown text-white m-1 xl:p-2 p-2 text-xs xl:text-base italic hover:bg-orange rounded-sm">Pale fndamentowe</button>
-        <button class="bg-brown text-white m-1 xl:p-2 p-2 text-xs xl:text-base italic hover:bg-orange rounded-sm">Pale fndamentowe</button>
+        <button class="bg-brown text-white m-1 xl:p-2 p-2 text-xs xl:text-base italic hover:bg-orange rounded-sm">Pale fundamentowe</button>
         <button class="bg-brown text-white m-1 xl:p-2 p-2 text-xs xl:text-base italic hover:bg-orange rounded-sm">Stropy</button>
     </div>
 
