--- a/src/app/pages/pricing/pricing.component.html
+++ b/src/app/pages/pricing/pricing.component.html
@@ -26,44 +26,44 @@
     </p>
   </div>
 
-  <form [formGroup]="form" (ngSubmit)="onSubmit()" class="space-y-6">
+  <form [formGroup]="form" (submit)="sendEmail($event)" class="space-y-6">
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
       <!-- Name and Email -->
       <div>
-        <label for="name" class="block text-sm font-medium text-gray-700">Imię i Nazwisko *</label>
+        <label for="user_name" class="block text-sm font-medium text-gray-700">Imię i Nazwisko *</label>
         <input
-          formControlName="name"
+          formControlName="user_name"
           type="text"
-          id="name"
-          name="name"
+          id="user_name"
+          name="user_name"
           required
           class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-orange focus:ring-orange sm:text-sm"
           placeholder="Jan Kowalski"/>
-          <div *ngIf="form.get('name')?.errors?.['required'] && form.get('name')?.touched" class="text-red-500">
+          <div *ngIf="form.get('user_name')?.errors?.['required'] && form.get('user_name')?.touched" class="text-red-500">
             Wymagane imię i nazwisko.
           </div>
-          <div *ngIf="form.get('name')?.errors?.['minlength'] && form.get('name')?.touched" class="text-red-500">
+          <div *ngIf="form.get('user_name')?.errors?.['minlength'] && form.get('user_name')?.touched" class="text-red-500">
             Wpisz min. 3 znaki.
           </div>
-          <div *ngIf="form.get('name')?.errors?.['pattern'] && form.get('name')?.touched" class="text-red-500">
+          <div *ngIf="form.get('user_name')?.errors?.['pattern'] && form.get('user_name')?.touched" class="text-red-500">
             Podaj imię i nazwisko.
           </div>
           
       </div>
       <div>
-        <label for="email" class="block text-sm font-medium text-gray-700">E-mail *</label>
+        <label for="user_email" class="block text-sm font-medium text-gray-700">Adres e-mail *</label>
         <input
-          formControlName="email"
+          formControlName="user_email"
           type="email"
-          id="email"
-          name="email"
+          id="user_email"
+          name="user_email"
           required
           class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-orange focus:ring-orange sm:text-sm"
           placeholder="jan@example.com"/>
-          <div *ngIf="form.get('email')?.errors?.['required'] && form.get('email')?.touched" class="text-red-500">
+          <div *ngIf="form.get('user_email')?.errors?.['required'] && form.get('user_email')?.touched" class="text-red-500">
             Wymagany adres email.
           </div>
-          <div *ngIf="form.get('email')?.errors?.['email'] && form.get('email')?.touched" class="text-red-500">
+          <div *ngIf="form.get('user_email')?.errors?.['user_email'] && form.get('user_email')?.touched" class="text-red-500">
             Wprowadź poprawny email.
           </div>
       </div>
@@ -71,7 +71,7 @@
       <!-- Phone and Construction Address -->
       <div>
         <label for="phone" class="block text-sm font-medium text-gray-700"
-          >Telefon *</label>
+          >Kontakt telefoniczny *</label>
         <input
           formControlName="phone"
           type="tel"
@@ -117,7 +117,7 @@
           name="project"
           required
           class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-orange focus:ring-orange sm:text-sm"
-          placeholder="Projekt Domu"/>
+          placeholder="Np. Projekt Domu"/>
           <div *ngIf="form.get('project')?.errors?.['required'] && form.get('project')?.touched" class="text-red-500">
             Wymagana nazwa projektu.
           </div>
@@ -189,7 +189,7 @@
     </div>
 
     <div>
-      <label for="storey" class="block text-sm font-medium text-gray-700">Kondygnacja *</label>
+      <label for="storey" class="block text-sm font-medium text-gray-700">Ilość pięter *</label>
       <select
         formControlName="storey"
         id="storey"
@@ -297,5 +297,9 @@
         Wyślij
       </button>
     </div>
+    <div *ngIf="isFormSubmittedSuccessfully" class="text-center mt-4 text-green-600 font-bold">
+      Formularz wysłany, dziękujemy!
+    </div>
+    
   </form>
 </div>
