--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,4 +1,5 @@
-<nav class="bg-black">
+
+<nav class="bg-[#F8F5F1]">
   <div class="max-w-screen-2xl flex flex-wrap items-center justify-between mx-auto p-4">
       <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
           <span class="text-orange self-center text-3xl font-semibold whitespace-nowrap">
@@ -13,7 +14,7 @@
       </a>
 
       <!-- NAVBAR COLLAPSE -->
-      <button type="button" class="navbar-toggle inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-orange rounded-lg md:hidden hover:text-black"
+      <button type="button" class="navbar-toggle inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-[orange] rounded-lg md:hidden hover:text-black"
         (click)="toggleNavbar()" [attr.aria-expanded]="isNavbarOpen.toString()">
         <svg *ngIf="!isNavbarOpen; else crossIcon" class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
             <path stroke="currentColor" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15" />
@@ -25,25 +26,42 @@
         </ng-template>
       </button>
       <div [class.hidden]="!isNavbarOpen" class="w-full md:block md:w-auto" id="navbar-dropdown">
-          <ul class="flex flex-col font-medium p-4 md:p-0 mt-4 border rounded-lg md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 bg-white md:bg-black">
+          <ul class="flex flex-col font-medium p-4 md:p-0 mt-4 border rounded-lg md:space-x-5 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 bg-white md:bg-inherit items-center poppins-medium">
               <li>
-                  <a href="#" class="block py-2 px-3 text-orange md:hover:text-white md:p-0" aria-current="page" [routerLink]="['/']"
-                      (click)="toggleNavbar()">Nasza Firma</a>
+                  <a href="#" class="block py-2 px-3 text-[#B5B5B5] md:hover:text-[#E47D49] md:p-0 poppins-medium" aria-current="page" [routerLink]="['/']"
+                      (click)="toggleNavbar()">O nas</a>
               </li>
               <li>
-                  <a href="#" class="block py-2 px-3 text-orange rounded md:hover:text-white md:border-0 md:p-0" [routerLink]="['/offer']"
+                  <a href="#" class="block py-2 px-3 text-[#B5B5B5] rounded md:hover:text-[#E47D49] md:border-0 md:p-0 poppins-medium" [routerLink]="['/offer']"
                       (click)="toggleNavbar()">Oferta</a>
               </li>
               <li>
-                  <a href="#" class="block py-2 px-3 text-orange rounded md:hover:text-white md:border-0 md:p-0" [routerLink]="['/our-work']"
+                  <a href="#" class="block py-2 px-3 text-[#B5B5B5] rounded md:hover:text-[#E47D49] md:border-0 md:p-0 poppins-medium" [routerLink]="['/our-work']"
                       (click)="toggleNavbar()">Realizacje</a>
               </li>
               <li>
-                  <a href="#" class="block py-2 px-3 text-orange rounded md:hover:text-white md:border-0 md:p-0" [routerLink]="['/pricing']"
+                  <a href="#" class="block py-2 px-3 text-[#B5B5B5] rounded md:hover:text-orange md:border-0 md:p-0 poppins-medium" [routerLink]="['/pricing']"
                       (click)="toggleNavbar()">Wycena</a>
               </li>
               <li>
-                  <a href="#" class="block py-2 px-3 text-orange rounded md:hover:text-white md:border-0 md:p-0" [routerLink]="['/contact']"
+                <a></a>
+              </li>
+              <li>
+                <a href="#" class="block py-2 ml-2 text-[#B5B5B5] rounded md:hover:text-orange md:border-0 md:p-0 poppins-medium" [routerLink]="['/pricing']"
+                    (click)="toggleNavbar()">PL</a>
+              </li>
+              <li class="px-0 navbar-text">
+                |
+              </li>
+              <li class="px-0">
+                <a href="#" class="block py-2 text-[#B5B5B5] rounded md:hover:text-orange md:border-0 md:p-0 poppins-medium" [routerLink]="['/pricing']"
+                    (click)="toggleNavbar()">EN</a>
+              </li>
+              <li>
+                <a></a>
+              </li>
+              <li>
+                  <a href="#" class="block py-2 px-5 text-white rounded-full bg-orange md:border-0 poppins-medium" [routerLink]="['/contact']"
                       (click)="toggleNavbar()">Kontakt</a>
               </li>
           </ul>
