--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <!-- <app-header></app-header> -->
 <app-navbar></app-navbar> 
-<app-carousel></app-carousel>
+<app-mosaic></app-mosaic>
+<!-- <app-carousel></app-carousel> -->
 <router-outlet></router-outlet>
 
 <app-footer></app-footer>
