Update home.html add new sections

--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,3 +1,9 @@
+.vision-container {
+  background-image: url("/assets/Railways-Road-slab 1.png");
+  background-size:cover;
+  height: 500px;
+}
+
 .container {
     overflow-x: hidden;
     
