--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,5 +1,5 @@
 
-<footer class="bg-black rounded-lg shadow m-4 dark:bg-gray-800">
+<footer class="bg-[#14171A] rounded-lg shadow m-4">
     <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
       <span class="text-sm text-white sm:text-center">© 2024 Solid Base™. All Rights Reserved.
     </span>
