--- a/src/app/pages/pricing/pricing.component.html
+++ b/src/app/pages/pricing/pricing.component.html
@@ -26,7 +26,7 @@
     </p>
   </div>
 
- <!-- <form [formGroup]="form" (submit)="sendEmail($event)" class="space-y-6"> -->
+ <form [formGroup]="form" (submit)="sendEmail($event)" class="space-y-6">
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
       <!-- Name and Email -->
       <div>
@@ -301,5 +301,5 @@
       Formularz wysłany, dziękujemy!
     </div>
     
-  <!-- </form> -->
+  </form>
 </div>
